--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-inverse">
   <div class="container">
     <div class="navbar-header">
-      <a class="navbar-brand" href="{% url 'home' %}">WebSiteName</a>
+      <a class="navbar-brand" href="{% url 'home' %}" style="font-family:  'Indie Flower', cursive;font-size: 30px;">Cataleya</a>
     </div>
     <ul class="nav navbar-nav">
       <li><a href="{% url 'home' %}">Acasa</a></li>
