--- a/templates/home.html
+++ b/templates/home.html
@@ -1,16 +1,40 @@
-
-{% extends 'main.html' %}{% load static %}
+{% extends 'main.html' %}
+{% load static %}
 {% block content %}
-<div class="container container-fluid bg-dark">
+
+<div class="container container-fluid" id="showcase">
+  <div class="positioning-div">
+    <div class="main-title">
+      <h1>Restaurnat Cataleya</h1>
+      <p>Experiente culinare deosebite livrate direct la usa ta!</p>
+      <div class="buttons-order">
+        <div style="margin: 0 auto;">
+          <div class="block">
+          <a href="{% url 'products-sort' 'pizza' %}"><i class="hovicon effect-3 sub-a" id="pizza-btn"><br>Comanda acum</i></a>
+        </div>
+        <div class="block">
+          <a href="{% url 'products-sort' 'burger' %}"><i class="hovicon effect-3 sub-a" id="burger-btn"><br>Comanda acum</i></a>
+        </div>
+        <div class="block">
+          <a href="{% url 'products-sort' 'salata' %}"><i class="hovicon effect-3 sub-a" id="salad-btn"><br>Comanda acum</i></a>
+        </div>
+        </div>
+        
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- <div class="container container-fluid bg-dark">
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
-      <!-- Indicators -->
+
       <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
         <li data-target="#myCarousel" data-slide-to="1"></li>
         <li data-target="#myCarousel" data-slide-to="2"></li>
       </ol>
   
-      <!-- Wrapper for slides -->
+
       <div class="carousel-inner">
   
         <div class="item active">
@@ -39,7 +63,7 @@
     
       </div>
   
-      <!-- Left and right controls -->
+
       <a class="left carousel-control" href="#myCarousel" data-slide="prev">
         <span class="glyphicon glyphicon-chevron-left"></span>
         <span class="sr-only">Previous</span>
@@ -48,7 +72,155 @@
         <span class="glyphicon glyphicon-chevron-right"></span>
         <span class="sr-only">Next</span>
       </a>
-    </div>
   </div>
-  <div class="transition-div"></div>
+</div> -->
+<div class="transition-div"></div>
+<style>
+.buttons-order{
+  margin-top: 3rem;
+  position: relative;
+  width: 100%;
+  height: 140px;
+  display: flex;
+}
+.block {
+  /* float: left; */
+  height: 150px;
+  margin:0 10px;
+  display: inline-block;
+}
+.hovicon {
+  display: inline-block;
+  font-size: 25px;
+  cursor: pointer;
+  width: 140px;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  text-align: center;
+  position: relative;
+  text-decoration: none;
+  z-index: 1;
+  color: #fff;
+}
+.hovicon:after {
+    pointer-events: none;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    content:'';
+    -webkit-box-sizing: content-box;
+    -moz-box-sizing: content-box;
+    box-sizing: content-box;
+}
+.hovicon:before {
+    /* speak: none; */
+    font-size: 48px;
+    line-height: 90px;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    display: block;
+    -webkit-font-smoothing: antialiased;
+}
+/* Effect 3 */
+.hovicon.effect-3 {
+    box-shadow: 0 0 0 4px #fff;
+    -webkit-transition: color 0.3s;
+    -moz-transition: color 0.3s;
+    transition: color 0.3s;
+}
+#pizza-btn:after{
+  background: url("../static/images/showcase/pizza-btn.jpg") no-repeat center center / cover;
+}
+#burger-btn:after{
+  background: url("../static/images/showcase/burger-btn.jpg") no-repeat center center / cover;
+}
+#salad-btn:after{
+  background: url("../static/images/showcase/salad-btn.jpg") no-repeat center center / cover;
+}
+.hovicon.effect-3:after {
+    top: -2px;
+    left: -2px;
+    padding: 2px;
+    z-index: -1;
+    
+    -webkit-transition: -webkit-transform 0.2s, opacity 0.3s;
+    -moz-transition: -moz-transform 0.2s, opacity 0.3s;
+    transition: transform 0.2s, opacity 0.3s;
+}
+/* Effect 3a */
+ .hovicon.effect-3.sub-a, .hovicon.effect-3.sub-a i {
+    color: transparent;
+}
+.hovicon.effect-3.sub-a:hover, .hovicon.effect-3.sub-a:hover i {
+    color: #fff;
+}
+.hovicon.effect-3.sub-a:hover:after {
+    -webkit-transform: scale(1.3);
+    -moz-transform: scale(1.3);
+    -ms-transform: scale(1.3);
+    transform: scale(1.3);
+    opacity: 0;
+}
+
+.block:nth-child(1){
+  animation: animation1 2s forwards;
+  animation-delay: 0.5s;
+}
+.block:nth-child(2){
+  animation: animation2 2s forwards;
+  animation-delay: 0.3s;
+}
+.block:nth-child(3){
+  animation: animation3 2s forwards;
+  animation-delay: 0.1s;
+}
+@keyframes animation1{
+  0%{
+    visibility: hidden;
+    transform: translateX(-1600px);
+  }
+  20%{
+    visibility: visible;
+  }
+  80%{
+    transform: translateX(5px);
+  }
+  100%{
+    transform: translateX(0px);
+  }
+}
+@keyframes animation2{
+  0%{
+    visibility: hidden;
+    transform: translateY(1600px);
+  }
+  20%{
+    visibility: visible;
+  }
+  80%{
+    transform: translateY(-5px);
+  }
+  100%{
+    transform: translateY(0px);
+  }
+}
+@keyframes animation3{
+  0%{
+    visibility: hidden;
+    transform: translateX(1600px);
+  }
+  70%{
+    visibility: visible;
+  }
+  80%{
+    transform: translateX(-5px);
+  }
+  100%{
+    transform: translateX(0px);
+  }
+}
+</style>
 {% endblock content %}
