changed website name to cataleya

--- a/templates/bill.html
+++ b/templates/bill.html
@@ -20,7 +20,7 @@
 <body>
     <!-- Content for Static Frame 'header_frame' -->
     <div id="header_content">
-    	<h1 style="font-size: 30px;">WebsiteName</h1>
+    	<h1 style="font-size: 30px;">Restaurant Cataleya</h1>
     </div>
 
     <!-- Content for Static Frame 'footer_frame' -->
@@ -34,7 +34,7 @@
         Strada Teodor Mihali 29, Marasti, Cluj-Napoca <br> 
         Strada Sesului 33A, Manastur, Cluj-Napoca <br>
         Telefon: 0364 990 / 0744 215 250 <br>
-        Relatii clienti: servicii.clienti@websitename.com
+        Relatii clienti: servicii.clienti@rst-cataleya.com
     </div>
     <p>
         <br>
