--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -7,18 +7,18 @@
     {% if "search" in type %}
     <h2 class="h2-c">Rezultatele cautarii</h2>
     {% else %}
-    <h2 class="h2-c">Preparate {{type}}</h2>
+    <h2 class="h2-c">Preparate {{typeof}}</h2>
     {% endif %}
 </div>
 
 <div class="container"> 
     <div class="row bg-dark">
-        {% if "search" not in type %}
+        {% if "search" not in typeof %}
         <div class="tags-window col-lg-2 color-white">
             <div class="page-header color-white" style="margin-top:0;">
                 <h2>Sort:</h2>
             </div>
-            <form action="{% url 'products-sort' type %}" method="POST" id="sorting-products-tags" name="theForm">
+            <form action="{% url 'products-sort' typeof %}" method="POST" id="sorting-products-tags" name="theForm">
                 {% csrf_token %}
                 <div class="sort-overflow-scroll">
                     {% for tag in tags %}
@@ -31,7 +31,7 @@
             </form>
         </div>
         {% endif %}
-        {% if 'search' not in type %}
+        {% if 'search' not in typeof %}
         <div class="col-lg-10">
         {% else %}
         <div class="col-lg-12">
