--- a/templates/home.html
+++ b/templates/home.html
@@ -3,77 +3,31 @@
 {% block content %}
 
 <div class="container container-fluid" id="showcase">
-  <div class="positioning-div">
-    <div class="main-title">
-      <h1>Restaurnat Cataleya</h1>
-      <p>Experiente culinare deosebite livrate direct la usa ta!</p>
-      <div class="buttons-order">
-        <div style="margin: 0 auto;">
-          <div class="block">
-          <a href="{% url 'products-sort' 'pizza' %}"><i class="hovicon effect-3 sub-a" id="pizza-btn"><br>Comanda acum</i></a>
+    <div class="positioning-div">
+        <div class="main-title">
+            <h1 class="writing-effect"></h1>
+            <p>Experiente culinare deosebite livrate direct la usa ta!</p>
+            <div class="buttons-order">
+                <div style="margin: 0 auto;">
+                    <div class="block">
+                        <a href="{% url 'products-sort' 'pizza' %}"><i class="hovicon effect-3 sub-a"
+                                                                       id="pizza-btn"><br>Comanda acum</i></a>
+                    </div>
+                    <div class="block">
+                        <a href="{% url 'products-sort' 'burger' %}"><i class="hovicon effect-3 sub-a"
+                                                                        id="burger-btn"><br>Comanda acum</i></a>
+                    </div>
+                    <div class="block">
+                        <a href="{% url 'products-sort' 'salata' %}"><i class="hovicon effect-3 sub-a"
+                                                                        id="salad-btn"><br>Comanda acum</i></a>
+                    </div>
+                </div>
+
+            </div>
         </div>
-        <div class="block">
-          <a href="{% url 'products-sort' 'burger' %}"><i class="hovicon effect-3 sub-a" id="burger-btn"><br>Comanda acum</i></a>
-        </div>
-        <div class="block">
-          <a href="{% url 'products-sort' 'salata' %}"><i class="hovicon effect-3 sub-a" id="salad-btn"><br>Comanda acum</i></a>
-        </div>
-        </div>
-        
-      </div>
     </div>
-  </div>
 </div>
 
-<!-- <div class="container container-fluid bg-dark">
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-
-      <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-      </ol>
-  
-
-      <div class="carousel-inner">
-  
-        <div class="item active">
-          <img src="{% static 'images/carousel/carousel1.jpg'  %}" alt="Los Angeles" style="width:100%;">
-          <div class="carousel-caption">
-            <h3>Pizza</h3>
-            <p>Facuta pe vatra, cu pasiune</p>
-          </div>
-        </div>
-  
-        <div class="item">
-          <img src="{% static 'images/carousel/carousel2.jpg'  %}" alt="Chicago" style="width:100%;">
-          <div class="carousel-caption">
-            <h3>Salată</h3>
-            <p>Din legume proaspete</p>
-          </div>
-        </div>
-      
-        <div class="item">
-          <img src="{% static 'images/carousel/carousel3.jpg'  %}" alt="New York" style="width:100%;">
-          <div class="carousel-caption">
-            <h3>Burger</h3>
-            <p>Carne frageda si suculenta</p>
-          </div>
-        </div>
-    
-      </div>
-  
-
-      <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="right carousel-control" href="#myCarousel" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right"></span>
-        <span class="sr-only">Next</span>
-      </a>
-  </div>
-</div> -->
 <div class="transition-div"></div>
 <style>
 .buttons-order{
@@ -84,7 +38,7 @@
   display: flex;
 }
 .block {
-  /* float: left; */
+  visibility: hidden;
   height: 150px;
   margin:0 10px;
   display: inline-block;
@@ -166,14 +120,17 @@
 }
 
 .block:nth-child(1){
+  transform: translateX(-1600px);
   animation: animation1 2s forwards;
   animation-delay: 0.5s;
 }
 .block:nth-child(2){
+  transform: translateY(1600px);
   animation: animation2 2s forwards;
   animation-delay: 0.3s;
 }
 .block:nth-child(3){
+  transform: translateX(1600px);
   animation: animation3 2s forwards;
   animation-delay: 0.1s;
 }
@@ -190,6 +147,7 @@
   }
   100%{
     transform: translateX(0px);
+    visibility: visible;
   }
 }
 @keyframes animation2{
@@ -205,6 +163,7 @@
   }
   100%{
     transform: translateY(0px);
+    visibility: visible;
   }
 }
 @keyframes animation3{
@@ -220,7 +179,24 @@
   }
   100%{
     transform: translateX(0px);
+    visibility: visible;
   }
 }
+
 </style>
+<script>
+'use strict'
+<!--    writing efect -->
+const title=document.querySelector(".writing-effect")
+const content="Restaurant Cataleya"
+let i=0;
+function typing(){
+    if(i<content.length){
+        title.innerHTML+=content.charAt(i)
+        i++
+        setTimeout(typing,100)
+    }
+}
+typing()
+</script>
 {% endblock content %}
