reverted the changes

--- a/templates/login.html
+++ b/templates/login.html
@@ -38,14 +38,16 @@
     <div class="overlay-container">
         <div class="overlay">
             <div class="overlay-panel overlay-left">
-                <h1>Bine ai venit!</h1>
-                <p>Enter your personal details and start journey with us</p>
-                <button class="ghost" id="signUp">Creare cont</button>
+                <h1>Welcome Back!</h1>
+                <p>
+                    To keep connected with us please login with your personal info
+                </p>
+                <button class="ghost" id="signIn">Conectare</button>
             </div>
             <div class="overlay-panel overlay-right">
-                <h1>Bine ai revenit!</h1>
-                <p>To keep connected with us please login with your personal info</p>
-                <button class="ghost" id="signIn">Conectare</button>
+                <h1>Hello there!</h1>
+                <p>Enter your personal details and start journey with us</p>
+                <button class="ghost" id="signUp">Creare cont</button>
             </div>
         </div>
     </div>
@@ -96,7 +98,6 @@
     if(message.length!==0){
       openModalButton.click()
     }
-
 
 </script>
 <style>
@@ -355,7 +356,6 @@
       color: #3c97bf;
       text-decoration: none;
     }
-
 
 </style>
 </html>
