--- a/products/templates/products/order_form.html
+++ b/products/templates/products/order_form.html
@@ -1,41 +1,45 @@
-
 <div class="row order-form-row" style="margin-top: 1rem;padding-bottom: 2rem;">
     <div class="col-sm-7 oreder-personal-info" style="border-right: 3px dotted white;">
         <h3>Date personale</h2>
-        <form method="POST" action="{% url 'prepare-bill' %}" id="order-form" name="orderForm">
-            {% csrf_token %}
-            <input type="text" name="priceTotal" id="priceTotal" class="hide-input">
-            <div class="form-group">
+            <form method="POST" action="{% url 'prepare-bill' %}" id="order-form" name="orderForm">
+                {% csrf_token %}
+                <input type="text" name="priceTotal" id="priceTotal" class="hide-input">
                 <div class="form-group">
-                    <div class="form-inline">
-                        <div class="form-group form-animate">
-                            <label for="firstname" >Prenume:</label><br>
-                            <input type="text" class="form-control" id="order-firstname" name="firstname" placeholder="Prenume" value="{{profile.firstname}}">
-                        </div>
-                        <div class="form-group form-animate">
-                            <label for="surname" >Nume:</label><br>
-                            <input type="text" class="form-control" id="order-surname" name="surname" placeholder="Nume" value="{{profile.surname}}">
+                    <div class="form-group">
+                        <div class="form-inline">
+                            <div class="form-group form-animate">
+                                <label for="firstname">Prenume:</label><br>
+                                <input type="text" class="form-control" id="order-firstname" name="firstname"
+                                       placeholder="Prenume" value="{{profile.firstname}}">
+                            </div>
+                            <div class="form-group form-animate">
+                                <label for="surname">Nume:</label><br>
+                                <input type="text" class="form-control" id="order-surname" name="surname"
+                                       placeholder="Nume" value="{{profile.surname}}">
+                            </div>
                         </div>
                     </div>
+                    <div class="form-group form-animate">
+                        <label for="phone">Telefon:</label>
+                        <input type="text" class="form-control" style="max-width: 200px;" name="phone" maxlength="12"
+                               size="12" placeholder="Telefon" id="order-phone" value="{{profile.phone}}">
+                    </div>
+                    <div class="form-group form-animate">
+                        <label for="email">Email:</label>
+                        <input type="email" class="form-control" name="email" placeholder="Adresa mail" id="order-email"
+                               value="{{profile.email}}">
+                    </div>
+                    <div class="form-group">
+                        <label for="deliveryAddress">Adresa livrare:</label>
+                        <textarea class="form-control" rows="4" name="deliveryAddress"
+                                  placeholder="Adresa de livrare..." id="order-address">{{profile.address}}</textarea>
+                    </div>
+                    <div class="form-group">
+                        <label for="comments">Comentarii:</label>
+                        <textarea class="form-control" rows="2" name="comments" id="order-comments"></textarea>
+                    </div>
                 </div>
-                <div class="form-group form-animate">
-                    <label for="phone">Telefon:</label>
-                    <input type="text" class="form-control" style="max-width: 200px;" name="phone" maxlength="12" size="12" placeholder="Telefon" id="order-phone" value="{{profile.phone}}">
-                </div>
-                <div class="form-group form-animate">
-                    <label for="email"  >Email:</label>
-                    <input type="email" class="form-control" name="email" placeholder="Adresa mail" id="order-email" value="{{profile.email}}">
-                </div>
-                <div class="form-group">
-                    <label for="deliveryAddress">Adresa livrare:</label>
-                    <textarea class="form-control" rows="4" name="deliveryAddress"  placeholder="Adresa de livrare..." id="order-address" >{{profile.address}}</textarea>
-                </div>
-                <div class="form-group">
-                    <label for="comments">Comentarii:</label>
-                    <textarea class="form-control" rows="2" name="comments" id="order-comments"></textarea>
-                </div>
-            </div>
-        </form>
+            </form>
     </div>
     <div class="col-sm-5 order-pay-method">
         <h3>Metoda plata</h3>
@@ -43,16 +47,17 @@
             <div class="form-group">
                 <div class="radio">
                     <label class="checkout-p"><input type="radio" name="optradio" checked>Plata la livrare</label>
-                  </div>
-                  <div class="radio">
+                </div>
+                <div class="radio">
                     <label class="checkout-p"><input type="radio" name="optradio">Plata cu cardul online</label>
-                    <p class="checkout-p" style="margin-left:3.4rem;">Plata cu cardul se va efectua dupa trimiterea comenzii.</p>
-                  </div>
-            </div> 
+                    <p class="checkout-p" style="margin-left:3.4rem;">Plata cu cardul se va efectua dupa trimiterea
+                        comenzii.</p>
+                </div>
+            </div>
         </form>
         <h3>Cost livrare</h3>
         <p class="checkout-p" id="delivery-cost">- Livrator magazin: 10.00 lei</p>
         <p class="checkout-p">Livrarea este gratis daca comanda depaseste pretul de 60 lei.</p>
     </div>
-  </div>
+</div>
 
