--- a/templates/footer.html
+++ b/templates/footer.html
@@ -5,16 +5,13 @@
                 <div class="page-header">
                     <h3>Informatii utile</h3>
                 </div>
-                <p class="color-white">Gramajele mentionate la produsele oferite sunt 
-                    cele de dinaintea prepararii termice.
-                    <br> 
-                    Timpul de Livrare 
-                    este unul estimativ (intre 30 min si 2,5 ore) 
-                    si difera in functie de numarul de comenzi 
-                    si eventualele situatii neprevazute ce pot
-                    aparea pe traseu. Aceasta va va fi comunicat
-                    de catre operatorul telefonic in momentul 
-                    confirmarii/plasarii comenzii.</p>
+                <p class="color-white">
+                    Gramajele mentionate la produsele oferite sunt cele de dinaintea prepararii termice.
+                    <br>
+                    Timpul de Livrare este unul estimativ (intre 30 min si 2,5 ore) si difera in functie de numarul
+                    de comenzi si eventualele situatii neprevazute ce pot aparea pe traseu. Aceasta va va fi comunicat
+                    de catre operatorul telefonic in momentul confirmarii/plasarii comenzii.
+                </p>
             </div>
             <div class="col-sm-3  mx">
                 <div class="page-header">
@@ -24,25 +21,27 @@
                     Locatie Manastur, Cluj-Napoca
                     <br>
                     Adresa:<span class="open-location"> strada Sesului 33A</span>
-                       
-                    <br>
-                    Telefon: 0364 990 sau 0744 215 250
-                </p >
-                <p class="color-white">
-                    Locatie Marasti, Cluj-Napoca
-                    <br>
-                    Adresa:<span class="open-location"> strada Teodor Mihali 29</span>  
+
                     <br>
                     Telefon: 0364 990 sau 0744 215 250
                 </p>
-                
+                <p class="color-white">
+                    Locatie Marasti, Cluj-Napoca
+                    <br>
+                    Adresa:<span class="open-location"> strada Teodor Mihali 29</span>
+                    <br>
+                    Telefon: 0364 990 sau 0744 215 250
+                </p>
+
             </div>
-            
+
             <div class="col-sm-3  mx">
                 <div class="page-header">
                     <h3>Program</h3>
                 </div>
-                <p class="color-white">Intre orele 09:00 si 23:00 asteptam comenzile dumneavoastra, atat online cat si telefonic</p>
+                <p class="color-white">
+                    Intre orele 09:00 si 23:00 asteptam comenzile dumneavoastra, atat online cat si telefonic
+                </p>
                 <p class="color-white">
                     Luni-vineri: 09:00 - 23:00 <br>
                     Sambata: 09:00 - 23:00 <br>
