--- a/templates/login.html
+++ b/templates/login.html
@@ -38,15 +38,17 @@
     <div class="overlay-container">
         <div class="overlay">
             <div class="overlay-panel overlay-left">
-                <h1>Welcome Back!</h1>
+                <h1>Bine ai revenit!</h1>
                 <p>
-                    To keep connected with us please login with your personal info
+                    Pentru a fi conectat cu noi conecteaza-te la contul tau personal
                 </p>
                 <button class="ghost" id="signIn">Conectare</button>
             </div>
             <div class="overlay-panel overlay-right">
-                <h1>Hello there!</h1>
-                <p>Enter your personal details and start journey with us</p>
+                <h1>Bine ai venit!</h1>
+                <p>
+                    Completeaza campurile cu datele tale personale pentru a te putea conecta cu noi
+                </p>
                 <button class="ghost" id="signUp">Creare cont</button>
             </div>
         </div>
