--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,68 +1,57 @@
 <nav class="navbar navbar-inverse">
-  <div class="container">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="{% url 'home' %}" style="font-family:  'Indie Flower', cursive;font-size: 30px;">Cataleya</a>
-    </div>
-    <ul class="nav navbar-nav">
-      <li><a href="{% url 'home' %}">Acasa</a></li>
-      <li class="dropdown">
-        <a class="dropdown-toggle" href="#"
-          >Preparate <span class="caret"></span
-        ></a>
-        <ul class="dropdown-menu">
-          <li><a href="{% url 'products' 'pizza'%}">Pizza</a></li>
-          <li><a href="{% url 'products' 'burger'%}">Burger</a></li>
-          <li><a href="{% url 'products' 'salata'%}">Salata</a></li>
-        </ul>
-      </li>
-    </ul>
-    <form
-      class="navbar-form navbar-left"
-      action="{% url 'products-search' %}"
-      method="POST"
-    >
-      {% csrf_token %}
-      <div class="input-group">
-        <input
-          type="text"
-          class="form-control"
-          placeholder="Cauta"
-          name="search"
-        />
-        <div class="input-group-btn">
-          <button class="btn btn-default" type="submit">
-            <i class="glyphicon glyphicon-search"></i>
-          </button>
+    <div class="container">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="{% url 'home' %}"
+               style="font-family:  'Indie Flower', cursive;font-size: 30px;">Cataleya</a>
         </div>
-      </div>
-    </form>
-    <ul class="nav navbar-nav navbar-right">
-      {% if profile %}
-      <li>
-        <a href="{% url 'user-profile' profile.username %}" data-toggle="tooltip" title="Vezi profilul">
-        </span> {{profile.username}}
-      </a>
-      </li>
-      <li>
-        <a href="{% url 'logout-user' %}">
-          <span class="glyphicon glyphicon-log-in"></span> Deconectare
-        </a>
-      </li>
-      {% else %}
-      <li>
-        <a href="{% url 'login' %}"
-          ><span class="glyphicon glyphicon-log-in"></span> Logare /
-          Inregistrare</a
-        >
-      </li>
-      {% endif %}
-      <li>
-        <a href="{% url 'show-products-cart' %}" id="show-products-market">
-          <i class="fas fa-shopping-cart"></i>
-          Cos
-          <span class="badge"></span>
-        </a>
-      </li>
-    </ul>
-  </div>
+        <ul class="nav navbar-nav">
+            <li><a href="{% url 'home' %}">Acasa</a></li>
+            <li class="dropdown">
+                <a class="dropdown-toggle" href="#">Preparate <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                    <li><a href="{% url 'products' 'pizza'%}">Pizza</a></li>
+                    <li><a href="{% url 'products' 'burger'%}">Burger</a></li>
+                    <li><a href="{% url 'products' 'salata'%}">Salata</a></li>
+                </ul>
+            </li>
+        </ul>
+        <form class="navbar-form navbar-left" action="{% url 'products-search' %}" method="POST">
+            {% csrf_token %}
+            <div class="input-group">
+                <input type="text" class="form-control" placeholder="Cauta" name="search"/>
+                <div class="input-group-btn">
+                    <button class="btn btn-default" type="submit">
+                        <i class="glyphicon glyphicon-search"></i>
+                    </button>
+                </div>
+            </div>
+        </form>
+        <ul class="nav navbar-nav navbar-right">
+            {% if profile %}
+            <li>
+                <a href="{% url 'user-profile' profile.username %}" data-toggle="tooltip" title="Vezi profilul">
+                    </span> {{profile.username}}
+                </a>
+            </li>
+            <li>
+                <a href="{% url 'logout-user' %}">
+                    <span class="glyphicon glyphicon-log-in"></span> Deconectare
+                </a>
+            </li>
+            {% else %}
+            <li>
+                <a href="{% url 'login' %}">
+                    <span class="glyphicon glyphicon-log-in"></span> Logare / Inregistrare
+                </a>
+            </li>
+            {% endif %}
+            <li>
+                <a href="{% url 'show-products-cart' %}" id="show-products-market">
+                    <i class="fas fa-shopping-cart"></i>
+                    Cos
+                    <span class="badge"></span>
+                </a>
+            </li>
+        </ul>
+    </div>
 </nav>
