--- a/templates/main.html
+++ b/templates/main.html
@@ -37,7 +37,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">Comanda plasata cu success!</h4>
+                <h4 class="modal-title"><span style="background-color:rgba(0,255,0,0.7);padding:0.3rem;">Comanda plasata cu success!</span></h4>
             </div>
             <div class="modal-body">
                 <p>
